--- a/_extensions/content-switcher/_extension.yml
+++ b/_extensions/content-switcher/_extension.yml
@@ -1,6 +1,6 @@
 name: content-switcher
 title: Content Switcher
-author: You
+author: Ashley Henry
 version: 0.1.0
 quarto-required: ">=1.3.0"
 contributes:
